src/objects/LID__Setup_Data__c.object
<CustomObject>
    <fields>
        <fullName>LID__Enterprise_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enterprise Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Job_Cron_String__c</fullName>
        <description>Cron string for the scheduled data validation job</description>
        <label>Job Cron String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__Steps_Completed__c</fullName>
        <label>Steps Completed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Setup Data</label>
    <nameField>
        <label>Setup Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setup Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>